Added support for RecordInterface to generate records from Interfaces